# skills

./: .copier-answers.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .rumdl.toml  .typos.toml  AGENTS.md  CHANGELOG.md  README.md  flake.nix  justfile  pyproject.toml
docs/: claude-code-on-web.md  serving-skills-via-mcp.md
scripts/: build-review-packet.py  docling-ocr.py  download-page-markdown.py  render-dot.py
skills-mcp/: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
skills-mcp/src/skills_mcp/: __init__.py  __main__.py  dedup.py  discovery.py  provider.py  server.py  validation.py
skills-mcp/tests/: conftest.py  test_dedup.py  test_discovery.py  test_server.py
skills/ai-skills/: ATTRIBUTION.md  SKILL.md
skills/alt-text/: SKILL.md
skills/antislop-writing/: ATTRIBUTION.md  SKILL.md
skills/api-design/: SKILL.md
skills/brainstorming/: ATTRIBUTION.md  SKILL.md
skills/changelog/: SKILL.md
skills/code-review/: ATTRIBUTION.md  SKILL.md
skills/commit-message/: ATTRIBUTION.md  SKILL.md
skills/debugging/: SKILL.md
skills/deep-research/: ATTRIBUTION.md  SKILL.md
skills/editorial-review/: SKILL.md
skills/explain-diff/: ATTRIBUTION.md  SKILL.md
skills/good-prose/: ATTRIBUTION.md  SKILL.md
skills/handoff/: ATTRIBUTION.md  SKILL.md
skills/interactive-notebook-demo/: SKILL.md
skills/mcp-research/: ATTRIBUTION.md  SKILL.md
skills/mermaid/: SKILL.md
skills/optimize-skills/: ATTRIBUTION.md  SKILL.md
skills/proof/: SKILL.md
skills/python/: SKILL.md
skills/python-concurrency-performance/: SKILL.md
(+295 files in other folders)
